--- a/index.html
+++ b/index.html
@@ -129,6 +129,18 @@
         .file-management ul li a:hover {
             text-decoration: underline;
         }
+
+        .file-management ul li button {
+            background: none;
+            border: none;
+            color: #ff0000;
+            cursor: pointer;
+            font-size: 16px;
+        }
+
+        .file-management ul li button:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -234,7 +246,7 @@
         const formData = new FormData();
         formData.append('file', file);
 
-        fetch('/upload', {  // Replace with your server endpoint
+        fetch('/upload', {
             method: 'POST',
             body: formData
         })
@@ -248,18 +260,38 @@
 
     // Function to fetch and display the list of files
     function fetchFileList() {
-        fetch('/files') // Replace with your server endpoint
+        fetch('/files')
             .then(response => response.json())
             .then(files => {
                 const fileList = document.getElementById('fileList');
                 fileList.innerHTML = '';
                 files.forEach(file => {
                     const listItem = document.createElement('li');
-                    listItem.innerHTML = `<a href="/download/${file}" download>${file}</a>`;
+                    listItem.innerHTML = `
+                        <a href="/download/${file}" download>${file}</a>
+                        <button onclick="deleteFile('${file}')">X</button>
+                    `;
                     fileList.appendChild(listItem);
                 });
             })
             .catch(error => console.error('Error fetching file list:', error));
+    }
+
+    // Function to handle file deletion
+    function deleteFile(filename) {
+        fetch('/delete', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({ filename })
+        })
+        .then(response => response.text())
+        .then(data => {
+            console.log('File deleted successfully:', data);
+            fetchFileList(); // Refresh file list after deletion
+        })
+        .catch(error => console.error('Error deleting file:', error));
     }
 
     // Fetch file list on page load
